--- a/CommonNetwork/CommonNetwork.csproj
+++ b/CommonNetwork/CommonNetwork.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\CAP\src\DotNetCore.CAP\DotNetCore.CAP.csproj" />
     <ProjectReference Include="..\CommonLibs\CommonLibs.csproj" />
   </ItemGroup>
 
