--- a/CommonNetwork/CommonNetwork.csproj
+++ b/CommonNetwork/CommonNetwork.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\CommonLibs\CommonLibs.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
+
 </Project>
