--- a/CommonServices/CommonServices.csproj
+++ b/CommonServices/CommonServices.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\CommonLibs\CommonLibs.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Manager\" />
+  </ItemGroup>
+
 </Project>
