--- a/CommonNetwork/CommonNetwork.csproj
+++ b/CommonNetwork/CommonNetwork.csproj
@@ -7,16 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetty.Buffers" Version="0.4.6" />
+    <PackageReference Include="DotNetty.Codecs" Version="0.4.6" />
+    <PackageReference Include="DotNetty.Common" Version="0.4.6" />
+    <PackageReference Include="DotNetty.Handlers" Version="0.4.6" />
+    <PackageReference Include="DotNetty.Transport" Version="0.4.6" />
     <PackageReference Include="Microsoft.AspNetCore.WebSockets" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CommonLibs\CommonLibs.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Data\" />
   </ItemGroup>
 
 </Project>
