--- a/CommonNetwork/CommonNetwork.csproj
+++ b/CommonNetwork/CommonNetwork.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="DotNetty.Transport" Version="0.4.6" />
     <PackageReference Include="Microsoft.AspNetCore.WebSockets" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.0" />
+    <PackageReference Include="protobuf-net" Version="2.3.2" />
   </ItemGroup>
 
   <ItemGroup>
